<resources>
    <string name="app_name">EngHack2018</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cannot_conect_to_servers">Cannot connect to servers</string>
    <string name="nameText">Name:</string>
    <string name="ratingText">Rating:</string>
    <string name="priceText">Price:</string>
    <string name="type">Type:</string>
    <string name="plates">PLATES</string>
    <string name="reject">Reject</string>
    <string name="accept">Accept</string>
    <string name="you_have_no_favourited_plates">You have no favourited plates</string>
    <string name="description">Description :</string>
    <string name="feature_coming_soon">Feature Coming soon...</string>
    <string name="link_to_google_maps">Link to google maps:</string>
    <string name="view_location">View location</string>
</resources>
