<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_gravity="center"
    android:layout_width="300dp"
    android:layout_height="300dp"
    android:background="@color/white"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/plateName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:textColor="@android:color/black"
        android:textSize="25sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:background="@color/white"
        android:gravity="start"
        android:orientation="vertical" >

        <TextView
            android:text="@string/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_margin="5dp"
            android:textColor="@android:color/black"
            android:textSize="20sp"/>

        <TextView
            android:text="@string/feature_coming_soon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_margin="15dp"
            android:gravity=""
            android:textColor="@android:color/black"
            android:textSize="15sp"/>

        <TextView
            android:text="@string/link_to_google_maps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_margin="5dp"
            android:textColor="@android:color/black"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/googleMapsLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_margin="15dp"
            android:gravity=""
            android:textColor="@android:color/black"
            android:textSize="15sp"/>

    </LinearLayout>

</LinearLayout>

