<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="20">
            <ImageView
                android:id="@+id/plateImage"
                android:layout_width="0dp"
                android:layout_height="110dp"
                android:layout_weight="6"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="15">

                <TableLayout
                    android:padding="5dp"
                    android:shrinkColumns="*"
                    android:stretchColumns="*"
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:layout_height="match_parent">

                    <TableRow>
                        <TextView
                            android:text="@string/nameText"
                            android:textSize="15sp"
                            android:textColor="@color/black"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                        <TextView
                            android:id="@+id/nameTexRow"
                            android:textSize="15sp"
                            android:textColor="@color/black"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                    </TableRow>

                    <TableRow>
                        <TextView
                            android:text="@string/ratingText"
                            android:textSize="15sp"
                            android:textColor="@color/black"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:id="@+id/ratingTextRow"
                            android:textSize="15sp"
                            android:textColor="@color/black"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                    </TableRow>

                    <TableRow>
                        <TextView
                            android:text="@string/priceText"
                            android:textSize="15sp"
                            android:textColor="@color/black"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                        <TextView
                            android:id="@+id/priceTextRow"
                            android:textSize="15sp"
                            android:textColor="@color/black"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                    </TableRow>

                    <TableRow>
                        <TextView
                            android:text="@string/type"
                            android:textSize="15sp"
                            android:textColor="@color/black"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:id="@+id/typeTextRow"
                            android:textSize="15sp"
                            android:textColor="@color/black"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                    </TableRow>
                </TableLayout>

            </LinearLayout>
        </LinearLayout>


        <ImageView
            android:background="@drawable/bottom_gradient_shadow"
            android:layout_width="match_parent"
            android:layout_height="5dp" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>